@@ -89,7 +89,7 @@ public class Utils {
         while (map.getRoadsFromFlag(flag).size() == 1) {
 
             /* Get the connected road */
-            Road road = map.getRoadsFromFlag(flag).get(0);
+            Road road = map.getRoadsFromFlag(flag).getFirst();
 
             /* Move the flag iterator to the other side */
             EndPoint otherSide = road.getOtherEndPoint(flag);
@@ -380,7 +380,7 @@ public class Utils {
         /* Find existing flags in the "to" network */
         while (!flagsToSearch.isEmpty()) {
 
-            Flag flag = flagsToSearch.remove(0);
+            Flag flag = flagsToSearch.removeFirst();
             fromFlags.add(flag);
 
             for (Road road : map.getRoadsFromFlag(flag)) {
